# paprika-recipes

./: .gitignore  ChangeLog  readme.md  requirements.txt  setup.cfg  setup.py
paprika_recipe/: archive.py  cmdline.py  command.py  constants.py  exceptions.py  recipe.py  remote.py  types.py  utils.py
paprika_recipe/commands/: create_archive.py  create_recipe.py  download_recipes.py  edit_recipe.py  export_to_directory.py  extract_archive.py  store_password.py  upload_recipes.py
paprika_recipes/: archive.py  cache.py  category.py  cmdline.py  command.py  constants.py  exceptions.py  recipe.py  remote.py  types.py  utils.py
paprika_recipes/commands/: create_archive.py  create_recipe.py  download_recipes.py  edit_recipe.py  extract_archive.py  store_password.py  upload_recipes.py
