[metadata]
name = paprika-recipe
author = Adam Coddington
author-email = me@adamcoddington.net
summary = Easily view and edit the contents of exports from the Paprika app.
description-file = readme.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/coddingtonbear/paprika-recipe/
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Programming Language :: Python :: 3

[files]
packages =
    paprika_recipe

[entry_points]
console_scripts =
    paprika-recipe = paprika_recipe.cmdline:main
paprika_recipe.commands =
    export-to-directory = paprika_recipe.commands.export_to_directory:Command
    import-from-directory = paprika_recipe.commands.import_from_directory:Command

[flake8]
# https://github.com/ambv/black#line-length
max-line-length = 88
ignore =
  E203,  # E203: whitespace before ':' (defer to black)
  E231,  # E231: missing whitespace after ',' (defer to black)
  E501,  # E501: line length (defer to black)
  W503,  # W503: break before binary operators (defer to black)
  A003,  # A003: [builtins] allow class attributes to be named after builtins (e.g., `id`)
exclude =
  migrations,

[pep8]
max-line-length = 88
ignore =
  E701,  # E701: multiple statements on one line (flags py3 inline type hints)

[pydocstyle]
# Harvey's initial attempt at pydocstyle rules. Please suggest improvements!
# The `(?!\d{4}_)` pattern is a hacky way to exclude migrations, since pydocstyle doesn't
# have an `exclude` option. https://github.com/PyCQA/pydocstyle/issues/175
match = (?!test_)(?!\d{4}_).*\.py

# See http://www.pydocstyle.org/en/5.0.1/error_codes.html
ignore =
  D100,  # D100: docstring in public module (we don't have a practice around this)
  D104,  # D104: docstring in public package (we don't have a practice around this)
  D105,  # D105: docstring in magic method
  D107,  # D105: docstring in __init__ method
  D203,  # D203: Blank line required before class docstring
  D213,  # D213: Multi-line docstring summary should start at the second line (need to choose D212 or D213; see https://stackoverflow.com/a/45990465)
  D302,  # D302: Use u”“” for Unicode docstrings
